--- a/С#Project/Service/Service.csproj
+++ b/С#Project/Service/Service.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\Enums\Operations.cs" />
+    <Compile Include="Helpers\Extentions\ConsoleExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GroupService.cs" />
     <Compile Include="Services\Interfaces\IGroupService.cs" />
